IDT is working without any handlers

--- a/arch/i386/make.config
+++ b/arch/i386/make.config
@@ -8,3 +8,5 @@ $(ARCHDIR)/boot.o \
 $(ARCHDIR)/flush_gdt.o \
 $(ARCHDIR)/frame_buffer.o \
 $(ARCHDIR)/gdt.o \
+$(ARCHDIR)/interrupt.o \
+$(ARCHDIR)/load_idt.o \
