Exception handling done; weird bug is now fixed

--- a/arch/i386/make.config
+++ b/arch/i386/make.config
@@ -9,4 +9,6 @@ $(ARCHDIR)/flush_gdt.o \
 $(ARCHDIR)/frame_buffer.o \
 $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/interrupt.o \
+$(ARCHDIR)/irq.o \
+$(ARCHDIR)/isr.o \
 $(ARCHDIR)/load_idt.o \
