Shitty keyboard handling ftw!

--- a/arch/i386/make.config
+++ b/arch/i386/make.config
@@ -11,4 +11,5 @@ $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/interrupt.o \
 $(ARCHDIR)/irq.o \
 $(ARCHDIR)/isr.o \
+$(ARCHDIR)/keyboard.o \
 $(ARCHDIR)/load_idt.o \
