Refactored frame_buffer into tty

--- a/arch/i386/make.config
+++ b/arch/i386/make.config
@@ -6,10 +6,10 @@ ARCH_LIBS:=
 ARCH_OBJS:=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/flush_gdt.o \
-$(ARCHDIR)/frame_buffer.o \
 $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/interrupt.o \
 $(ARCHDIR)/irq.o \
 $(ARCHDIR)/isr.o \
 $(ARCHDIR)/keyboard.o \
 $(ARCHDIR)/load_idt.o \
+$(ARCHDIR)/tty.o \
