Physical memory manager allocates frames

--- a/arch/i386/make.config
+++ b/arch/i386/make.config
@@ -12,4 +12,5 @@ $(ARCHDIR)/irq.o \
 $(ARCHDIR)/isr.o \
 $(ARCHDIR)/keyboard.o \
 $(ARCHDIR)/load_idt.o \
+$(ARCHDIR)/pm_manager.o \
 $(ARCHDIR)/tty.o \
